--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+
 node_modules/
 
+# Ignore logs and temporary files
+*.log
+*.tmp
+
+# Ignore environment-specific files
+.env
+*.env
+config.env
+
+# Ignore build artifacts
+dist/
+
+#secret fille
 .env
