--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "morgan": "^1.10.0",
+    "uuid": "^11.0.3",
     "xss": "^1.0.15"
   },
   "devDependencies": {
