--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^11.0.3",
     "xss": "^1.0.15"
   },
