--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "uuid": "^11.0.3",
     "xss": "^1.0.15"
   },
