--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "uuid": "^11.0.3",
+    "validator": "^13.12.0",
     "xss": "^1.0.15"
   },
   "devDependencies": {
