--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "pdfkit": "^0.15.1",
     "uuid": "^11.0.3",
     "validator": "^13.12.0",
     "xss": "^1.0.15"
