--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "author": "kamau simon",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "mongoose": "^8.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.16",
     "pdfkit": "^0.15.1",
     "sequelize": "^6.37.5",
