--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "author": "kamau simon",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.717.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
