--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.3.1",
