--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
+    "@sendgrid/mail": "^8.1.4",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
@@ -29,7 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.10.0",
     "pdfkit": "^0.15.1",
     "sequelize": "^6.37.5",
     "uuid": "^11.0.3",
