--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nanoid": "^5.0.9",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.15.1",
     "sequelize": "^6.37.5",
